--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -62,9 +62,7 @@ jobs:
     strategy:
       matrix:
         scenario:
-          - ember-lts-3.4
-          - ember-lts-3.8
-          - ember-lts-3.12
+          - ember-3.13
           - ember-lts-3.16
           - ember-lts-3.20
           - ember-release
