--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "test:ember-compatibility": "ember try:each"
   },
   "dependencies": {
+    "ember-cache-primitive-polyfill": "^1.0.0",
     "ember-cli-babel": "^7.21.0",
     "ember-cli-htmlbars": "^5.2.0"
   },
