--- a/package.json
+++ b/package.json
@@ -20,17 +20,25 @@
     "start": "ember serve",
     "test": "npm-run-all lint:* test:*",
     "test:ember": "ember test",
-    "test:ember-compatibility": "ember try:each"
+    "test:ember-compatibility": "ember try:each",
+    "prepublishOnly": "ember ts:precompile",
+    "postpublish": "ember ts:clean"
   },
   "dependencies": {
     "ember-cache-primitive-polyfill": "^1.0.0",
     "ember-cli-babel": "^7.21.0",
-    "ember-cli-htmlbars": "^5.2.0"
+    "ember-cli-htmlbars": "^5.2.0",
+    "ember-cli-typescript": "^3.1.4"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
     "@glimmer/component": "^1.0.1",
     "@glimmer/tracking": "^1.0.0",
+    "@types/ember": "^3.16.0",
+    "@types/ember-qunit": "^3.4.9",
+    "@types/ember__test-helpers": "^1.7.2",
+    "@types/qunit": "^2.9.1",
+    "@types/rsvp": "^4.0.3",
     "babel-eslint": "^10.1.0",
     "broccoli-asset-rev": "^3.0.0",
     "ember-auto-import": "^1.6.0",
@@ -38,6 +46,7 @@
     "ember-cli-dependency-checker": "^3.2.0",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
+    "ember-cli-typescript-blueprints": "^3.0.0",
     "ember-cli-uglify": "^3.0.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.1",
@@ -54,7 +63,8 @@
     "eslint-plugin-node": "^11.1.0",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "qunit-dom": "^1.2.0"
+    "qunit-dom": "^1.2.0",
+    "typescript": "^3.9.7"
   },
   "engines": {
     "node": "10.* || >= 12"
