--- a/package.json
+++ b/package.json
@@ -59,10 +59,12 @@
     "ember-template-lint": "^2.9.1",
     "ember-try": "^1.4.0",
     "eslint": "^7.5.0",
-    "eslint-plugin-ember": "^8.9.1",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.0.5",
     "qunit-dom": "^1.2.0",
     "typescript": "^3.9.7"
   },
