--- a/package.json
+++ b/package.json
@@ -26,9 +26,7 @@
   },
   "dependencies": {
     "ember-cache-primitive-polyfill": "^1.0.0",
-    "ember-cli-babel": "^7.21.0",
-    "ember-cli-htmlbars": "^5.2.0",
-    "ember-cli-typescript": "^3.1.4"
+    "ember-cli-babel": "^7.21.0"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
@@ -44,8 +42,10 @@
     "ember-auto-import": "^1.6.0",
     "ember-cli": "~3.20.0",
     "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli-htmlbars": "^5.2.0",
     "ember-cli-inject-live-reload": "^2.0.2",
     "ember-cli-sri": "^2.1.1",
+    "ember-cli-typescript": "^3.1.4",
     "ember-cli-typescript-blueprints": "^3.0.0",
     "ember-cli-uglify": "^3.0.0",
     "ember-disable-prototype-extensions": "^1.1.3",
