--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,6 +40,10 @@
       "ember-memo-decorator-polyfill/test-support/*": [
         "addon-test-support/*"
       ],
+      "@glimmer/tracking": [
+        "./",
+        "node_modules/@glimmer/tracking/dist/types"
+      ],
       "*": [
         "types/*"
       ]
