--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
+    "patch-package": "^6.2.2",
     "prettier": "^2.0.5",
     "qunit-dom": "^1.2.0",
     "typescript": "^3.9.7"
