--- a/package.json
+++ b/package.json
@@ -1,15 +1,31 @@
 {
   "name": "ember-memo-decorator-polyfill",
   "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "Polyfill for RFC 566: @memo",
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "polyfill",
+    "glimmer",
+    "tracking",
+    "tracking",
+    "cache",
+    "cached",
+    "memo",
+    "memoize",
+    "memoized",
+    "memoization"
   ],
-  "repository": "",
+  "homepage": "https://github.com/ember-polyfills/ember-memo-decorator-polyfill#readme",
+  "bugs": {
+    "url": "https://github.com/ember-polyfills/ember-memo-decorator-polyfill/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ember-polyfills/ember-memo-decorator-polyfill.git"
+  },
   "license": "MIT",
-  "author": "",
+  "author": "Jan Buschtöns <jan@buschtoens.me> (https://jan.buschtoens.me)",
   "directories": {
-    "doc": "doc",
     "test": "tests"
   },
   "scripts": {
