chore(pkg): [REVERT ME] add `patch-package` hook

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test": "tests"
   },
   "scripts": {
+    "postinstall": "patch-package",
     "build": "ember build --environment=production",
     "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
     "lint:hbs": "ember-template-lint .",
