--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
   },
   "dependencies": {
     "ember-cache-primitive-polyfill": "^1.0.0",
-    "ember-cli-babel": "^7.21.0"
+    "ember-cli-babel": "^7.21.0",
+    "patch-package": "^6.2.2"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
@@ -79,7 +80,6 @@
     "eslint-plugin-prettier": "^3.1.4",
     "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "patch-package": "^6.2.2",
     "prettier": "^2.0.5",
     "qunit-dom": "^1.2.0",
     "release-it": "^13.6.5",
