--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-memo-decorator-polyfill",
-  "version": "0.0.0",
+  "version": "0.1.0-0",
   "description": "Polyfill for RFC 566: @memo",
   "keywords": [
     "ember-addon",
