--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "test": "tests"
   },
   "scripts": {
-    "postinstall": "patch-package",
     "build": "ember build --environment=production",
     "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
     "lint:hbs": "ember-template-lint .",
@@ -41,8 +40,7 @@
   },
   "dependencies": {
     "ember-cache-primitive-polyfill": "^1.0.0",
-    "ember-cli-babel": "^7.21.0",
-    "patch-package": "^6.2.2"
+    "ember-cli-babel": "^7.21.0"
   },
   "devDependencies": {
     "@ember/optional-features": "^1.3.0",
