feat: patch `ember-cli-babel`

--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "edition": "octane"
   },
   "ember-addon": {
+    "before": "ember-cli-babel",
     "configPath": "tests/dummy/config"
   },
   "release-it": {
