--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,14 +10,14 @@ on:
     # filtering branches here prevents duplicate builds from pull_request and push
     branches:
       - main
-      - "v*"
+      - 'v*'
     # always run CI for tags
     tags:
-      - "*"
+      - '*'
 
   # early issue detection: run CI weekly on Sundays
   schedule:
-    - cron: "0 6 * * 0"
+    - cron: '0 6 * * 0'
 
 env:
   CI: true
@@ -28,9 +28,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
       - name: Install Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2-beta
         with:
           node-version: 14
       - name: Install Dependencies
@@ -45,9 +45,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
       - name: Install Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2-beta
         with:
           node-version: 10
       - name: Install Dependencies
@@ -70,9 +70,9 @@ jobs:
           - ember-canary
     steps:
       - name: Checkout Code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
       - name: Install Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2-beta
         with:
           node-version: 14
       - name: Install Dependencies
