--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
   "dependencies": {
     "@glimmer/tracking": "^1.0.4",
     "ember-cache-primitive-polyfill": "^1.0.1",
-    "ember-cli-babel": "^7.21.0"
+    "ember-cli-babel": "^7.21.0",
+    "ember-cli-babel-plugin-helpers": "^1.1.1"
   },
   "devDependencies": {
     "@ember/optional-features": "^2.0.0",
