--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,82 +1,78 @@
-# This workflow is largely based on
-# https://github.com/salsify/ember-css-modules/blob/master/.github/workflows/ci.yml
-
 name: CI
 
-# These trigger patterns courtesy of https://github.com/broccolijs/broccoli/pull/436
 on:
-  pull_request:
   push:
-    # filtering branches here prevents duplicate builds from pull_request and push
     branches:
       - main
-      - "v*"
-    # always run CI for tags
-    tags:
-      - "*"
+      - master
+  pull_request: {}
 
-  # early issue detection: run CI weekly on Sundays
-  schedule:
-    - cron: "0 6 * * 0"
-
-env:
-  CI: true
+concurrency:
+  group: ci-${{ github.head_ref || github.ref }}
+  cancel-in-progress: true
 
 jobs:
-  test-locked-deps:
-    name: Locked Deps
+  test:
+    name: "Tests"
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v1
+      - uses: actions/checkout@v3
       - name: Install Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 14.x
+          cache: yarn
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
       - name: Lint
         run: yarn lint
-      - name: Browser Tests
+      - name: Run Tests
         run: yarn test:ember
 
-  test-old-dependencies:
-    name: Oldest Supported Env
+  floating:
+    name: "Floating Dependencies"
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v1
-      - name: Install Node
-        uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 10
+          node-version: 14.x
+          cache: yarn
       - name: Install Dependencies
-        run: yarn install --frozen-lockfile
-      - name: Browser Tests
+        run: yarn install --no-lockfile
+      - name: Run Tests
         run: yarn test:ember
 
-  test-try:
-    name: Ember Try
+  try-scenarios:
+    name: ${{ matrix.try-scenario }}
     runs-on: ubuntu-latest
-    needs: [test-locked-deps]
+    needs: "test"
+    timeout-minutes: 10
+
     strategy:
+      fail-fast: false
       matrix:
-        scenario:
-          - ember-3.13
-          - ember-lts-3.16
-          - ember-lts-3.20
+        try-scenario:
           - ember-lts-3.24
+          - ember-lts-3.28
           - ember-release
           - ember-beta
           - ember-canary
+          - embroider-safe
+          - embroider-optimized
+
     steps:
-      - name: Checkout Code
-        uses: actions/checkout@v1
+      - uses: actions/checkout@v3
       - name: Install Node
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 14.x
+          cache: yarn
       - name: Install Dependencies
         run: yarn install --frozen-lockfile
-      - name: Try Scenario
-        run: yarn ember try:one ${{ matrix.scenario }}
+      - name: Run Tests
+        run: ./node_modules/.bin/ember try:one ${{ matrix.try-scenario }}
