--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   },
   "scripts": {
     "build": "ember build --environment=production",
+    "build:node": "tsc -p tsconfig.node.json",
+    "prepare": "yarn run build:node",
     "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
     "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
     "lint:hbs": "ember-template-lint .",
@@ -52,6 +54,8 @@
     "@ember/test-helpers": "^2.8.1",
     "@embroider/test-setup": "^1.8.3",
     "@glimmer/component": "^1.1.2",
+    "@types/babel__core": "^7.1.19",
+    "@types/babel__traverse": "^7.18.1",
     "@types/ember": "^3.16.0",
     "@types/ember-qunit": "^3.4.9",
     "@types/ember-resolver": "^5.0.9",
@@ -92,7 +96,7 @@
     "qunit-dom": "^2.0.0",
     "release-it": "^14.0.2",
     "release-it-lerna-changelog": "^2.3.0",
-    "typescript": "^4.0.2",
+    "typescript": "~4.8.3",
     "webpack": "^5.74.0"
   },
   "engines": {
