--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,6 +57,9 @@ jobs:
       fail-fast: false
       matrix:
         try-scenario:
+          - ember-3.13
+          - ember-lts-3.16
+          - ember-lts-3.20
           - ember-lts-3.24
           - ember-lts-3.28
           - ember-release
