--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     "test:ember-compatibility": "ember try:each"
   },
   "dependencies": {
+    "@embroider/macros": "^1.8.3",
     "@glimmer/tracking": "^1.1.2",
+    "babel-import-util": "^1.2.2",
     "ember-cache-primitive-polyfill": "^1.0.1",
     "ember-cli-babel": "^7.26.11",
     "ember-cli-babel-plugin-helpers": "^1.1.1"
@@ -56,7 +58,7 @@
     "@glimmer/component": "^1.1.2",
     "@types/babel__core": "^7.1.19",
     "@types/babel__traverse": "^7.18.1",
-    "@types/ember": "^3.16.0",
+    "@types/ember": "^4.0.1",
     "@types/ember-qunit": "^5.0.1",
     "@types/ember-resolver": "^5.0.9",
     "@types/ember__test-helpers": "^2.8.1",
@@ -111,6 +113,9 @@
   "ember-addon": {
     "before": "ember-cli-babel",
     "configPath": "tests/dummy/config"
+  },
+  "peerDependencies": {
+    "ember-source": "^3.13.0 | ^4.0.0"
   },
   "release-it": {
     "plugins": {
